cmake_minimum_required(VERSION 3.4)
project(graph_math)
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
find_package(OpenGL REQUIRED)
include_directories(${OPENGL_INCLUDE_DIR})
find_package(GLUT REQUIRED)
find_package(Boost REQUIRED)
include_directories(${GLUT_INCLUDE_DIR})
IF (Boost_FOUND)
    include_directories(${Boost_INCLUDE_DIRS})
    ADD_DEFINITIONS("-DHAS_BOOST")
    message(STATUS, "include boost include dirs ${Boost_INCLUDE_DIRS}")
ENDIF()
if (NOT  Boost_FOUND) 
    message(FATAL_ERROR "Could not find boost")
endif()

file(GLOB SRC_FILE *.cpp base/*.cpp)
set(CMAKE_CXX_STANDARD 11)
add_executable(${PROJECT_NAME} ${SRC_FILE})
target_link_libraries( graph_math ${OpenCV_LIBS} ${GLUT_LIBRARY} ${OPENGL_LIBRARY} ${Boost_LIBRARY})
set(CMAKE_CXX_STANDARD 17)
